--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 
 <p>
   
-    <a href="unassigned.html">Ten unassigned issues</a> (ten open).
+    <a href="unassigned.html">11 unassigned issues</a> (11 open).
   
 </p>
 
@@ -62,6 +62,15 @@
   <tbody>
   
     <tr class="even-row">
+      <td class="date">2009-04-08</td>
+      <td class="issuename">
+        <a href="issue-a19d138905627f0e951c84c1b8952b59b2b9c563.html">metaserver window misbehaves if quit while client connected</a> 
+      </td>
+      <td> created </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-eff2eac72769e6049f126199609c46a0fede25b8.html">metaserver window requests no iconify attribute</a> 
@@ -70,7 +79,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> 
@@ -79,7 +88,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> 
@@ -88,7 +97,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> 
@@ -97,7 +106,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> 
@@ -106,7 +115,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> 
@@ -115,7 +124,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-03-23</td>
       <td class="issuename">
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> 
@@ -124,7 +133,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-03-18</td>
       <td class="issuename">
         <a href="issue-766871fb6cab961f1138c8d72ccbb0523f33833e.html">make install fails if libgmp not available</a> 
@@ -133,19 +142,10 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-03-18</td>
       <td class="issuename">
         <a href="issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html">makekey can fail and is not retried during a build</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-03-13</td>
-      <td class="issuename">
-        <a href="issue-9b966bd6ed186fa7d55efa6062582065a390b7b7.html">GGZ Gaming Zone integration</a> 
       </td>
       <td> created </td>
     </tr>
