--- a/html/component-netrek-client-cow.html
+++ b/html/component-netrek-client-cow.html
@@ -66,7 +66,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-03-23</td>
       <td class="issuename">
         <a href="issue-eff2eac72769e6049f126199609c46a0fede25b8.html">metaserver window requests no iconify attribute</a>
