--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 
 <p>
   
-    <a href="unassigned.html">13 unassigned issues</a> (12 open).
+    <a href="unassigned.html">13 unassigned issues</a> (11 open).
   
 </p>
 
@@ -60,6 +60,24 @@
 
 <table class="log">
   <tbody>
+  
+    <tr class="even-row">
+      <td class="date">2009-05-09</td>
+      <td class="issuename">
+        <a href="issue-9ceb1d26257c5d3a7d51dd49c53512ebc202ec88.html">explain how to get an account on a netrek server</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+      </td>
+      <td> closed with disposition fixed </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
+      <td class="date">2009-05-09</td>
+      <td class="issuename">
+        <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a> 
+      </td>
+      <td> commented </td>
+    </tr>
+    <tr><td></td></tr>
   
     <tr class="even-row">
       <td class="date">2009-05-09</td>
@@ -130,24 +148,6 @@
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> 
       </td>
       <td> assigned to release 3.2.10 from unassigned </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="even-row">
-      <td class="date">2009-03-23</td>
-      <td class="issuename">
-        <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> 
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-03-23</td>
-      <td class="issuename">
-        <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> 
-      </td>
-      <td> commented </td>
     </tr>
     <tr><td></td></tr>
   
