--- a/html/unassigned.html
+++ b/html/unassigned.html
@@ -199,7 +199,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-03-01</td>
       <td class="issuename">
         <a href="issue-9ceb1d26257c5d3a7d51dd49c53512ebc202ec88.html">explain how to get an account on a netrek server</a>
