fix metaserver window staying behind on quit

--- a/html/component-netrek-client-cow.html
+++ b/html/component-netrek-client-cow.html
@@ -51,7 +51,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-04-08</td>
       <td class="issuename">
         <a href="issue-a19d138905627f0e951c84c1b8952b59b2b9c563.html">metaserver window misbehaves if quit while client connected</a>
