--- a/html/index.html
+++ b/html/index.html
@@ -66,11 +66,20 @@
       <td class="issuename">
         <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> 
       </td>
-      <td> created </td>
+      <td> commented </td>
     </tr>
     <tr><td></td></tr>
   
     <tr class="odd-row">
+      <td class="date">2009-06-04</td>
+      <td class="issuename">
+        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> 
+      </td>
+      <td> created </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="even-row">
       <td class="date">2009-06-01</td>
       <td class="issuename">
         <a href="issue-a19d138905627f0e951c84c1b8952b59b2b9c563.html">metaserver window misbehaves if quit while client connected</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -79,7 +88,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-05-09</td>
       <td class="issuename">
         <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> 
@@ -88,7 +97,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-05-09</td>
       <td class="issuename">
         <a href="issue-9ceb1d26257c5d3a7d51dd49c53512ebc202ec88.html">explain how to get an account on a netrek server</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -97,7 +106,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-05-09</td>
       <td class="issuename">
         <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a> 
@@ -106,7 +115,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-05-09</td>
       <td class="issuename">
         <a href="issue-eff2eac72769e6049f126199609c46a0fede25b8.html">metaserver window requests no iconify attribute</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -115,7 +124,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-05-05</td>
       <td class="issuename">
         <a href="issue-7faa061983888bfb5a8d726aed2102b5509d9e62.html">ship an xtrekrc system-wide</a> 
@@ -124,7 +133,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-04-08</td>
       <td class="issuename">
         <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a> 
@@ -133,19 +142,10 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-04-08</td>
       <td class="issuename">
         <a href="issue-a19d138905627f0e951c84c1b8952b59b2b9c563.html">metaserver window misbehaves if quit while client connected</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
-      </td>
-      <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-03-23</td>
-      <td class="issuename">
-        <a href="issue-eff2eac72769e6049f126199609c46a0fede25b8.html">metaserver window requests no iconify attribute</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
       </td>
       <td> created </td>
     </tr>
