--- a/html/unassigned.html
+++ b/html/unassigned.html
@@ -19,7 +19,7 @@
   <tbody>
   
     <tr>
-      <td>  </td>
+      <td> <img src="red-check.png" alt="won't fix" title="won't fix"/> </td>
       <td class="littledate">2009-06-04</td>
       <td class="issuename">
         <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a>
@@ -49,7 +49,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-04-08</td>
       <td class="issuename">
         <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a>
@@ -94,7 +94,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="red-check.png" alt="won't fix" title="won't fix"/> </td>
       <td class="littledate">2009-03-23</td>
       <td class="issuename">
         <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a>
@@ -109,7 +109,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-03-23</td>
       <td class="issuename">
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a>
@@ -139,7 +139,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-03-18</td>
       <td class="issuename">
         <a href="issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html">makekey can fail and is not retried during a build</a>
@@ -169,7 +169,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-03-13</td>
       <td class="issuename">
         <a href="issue-a2144bad141edf53d0816574022d3adeb23cd8d6.html">use new logo</a>
@@ -199,7 +199,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-03-01</td>
       <td class="issuename">
         <a href="issue-05f15891c7925eb1e619b5f586b3332fb41ac8a1.html">LP #331401 client failure is not reported to metaserver window</a>
