system wide default file 7faa061983888bfb5a8d726aed2102b5509d9e62

--- a/html/component-netrek-client-cow.html
+++ b/html/component-netrek-client-cow.html
@@ -36,7 +36,7 @@
     </tr>
   
     <tr>
-      <td>  </td>
+      <td> <img src="green-check.png" alt="fixed" title="fixed"/> </td>
       <td class="littledate">2009-05-05</td>
       <td class="issuename">
         <a href="issue-7faa061983888bfb5a8d726aed2102b5509d9e62.html">ship an xtrekrc system-wide</a>
