--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 
 <p>
   
-    <a href="unassigned.html">14 unassigned issues</a> (four open).
+    <a href="unassigned.html">14 unassigned issues</a> (three open).
   
 </p>
 
@@ -64,7 +64,7 @@
     <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html">makekey can fail and is not retried during a build</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-7faa061983888bfb5a8d726aed2102b5509d9e62.html">ship an xtrekrc system-wide</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -73,13 +73,22 @@
     <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
+        <a href="issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html">makekey can fail and is not retried during a build</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+      </td>
+      <td> closed with disposition fixed </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="even-row">
+      <td class="date">2009-06-16</td>
+      <td class="issuename">
         <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
       </td>
       <td> closed with disposition wontfix </td>
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
         <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -88,7 +97,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
         <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -97,7 +106,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
         <a href="issue-a2144bad141edf53d0816574022d3adeb23cd8d6.html">use new logo</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -106,7 +115,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
         <a href="issue-05f15891c7925eb1e619b5f586b3332fb41ac8a1.html">LP #331401 client failure is not reported to metaserver window</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
@@ -115,7 +124,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
         <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
@@ -124,7 +133,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2009-06-04</td>
       <td class="issuename">
         <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
@@ -133,21 +142,12 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2009-06-04</td>
       <td class="issuename">
         <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
       </td>
       <td> created </td>
-    </tr>
-    <tr><td></td></tr>
-  
-    <tr class="odd-row">
-      <td class="date">2009-06-01</td>
-      <td class="issuename">
-        <a href="issue-a19d138905627f0e951c84c1b8952b59b2b9c563.html">metaserver window misbehaves if quit while client connected</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
-      </td>
-      <td> closed with disposition fixed </td>
     </tr>
     <tr><td></td></tr>
   
