--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,7 @@
     <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-7faa061983888bfb5a8d726aed2102b5509d9e62.html">ship an xtrekrc system-wide</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-7faa061983888bfb5a8d726aed2102b5509d9e62.html">ship an xtrekrc system-wide</a> <img class="inline-status-image" src="green-check.png" title="fixed" alt="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -73,7 +73,7 @@
     <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html">makekey can fail and is not retried during a build</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-0791f468d9d3a93961f2544a81cc56ca78871ee4.html">makekey can fail and is not retried during a build</a> <img class="inline-status-image" src="green-check.png" title="fixed" alt="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -82,7 +82,7 @@
     <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
+        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" title="won't fix" alt="won't fix"/>
       </td>
       <td> closed with disposition wontfix </td>
     </tr>
@@ -91,7 +91,7 @@
     <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-c42a03cab6af30875bf7d1cb0498aafc71a6e380.html">does not exit on 'q' due to SDL_WaitThread</a> <img class="inline-status-image" src="green-check.png" title="fixed" alt="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -100,7 +100,7 @@
     <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-f225d7e3d4fa574703fdc8a7c051a8cb260afeb6.html">sound path changed, 3.2.9 to 3.2.10, sgi</a> <img class="inline-status-image" src="green-check.png" title="fixed" alt="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -109,7 +109,7 @@
     <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-a2144bad141edf53d0816574022d3adeb23cd8d6.html">use new logo</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-a2144bad141edf53d0816574022d3adeb23cd8d6.html">use new logo</a> <img class="inline-status-image" src="green-check.png" title="fixed" alt="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -118,7 +118,7 @@
     <tr class="even-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-05f15891c7925eb1e619b5f586b3332fb41ac8a1.html">LP #331401 client failure is not reported to metaserver window</a> <img class="inline-status-image" src="green-check.png" alt="fixed" title="fixed"/>
+        <a href="issue-05f15891c7925eb1e619b5f586b3332fb41ac8a1.html">LP #331401 client failure is not reported to metaserver window</a> <img class="inline-status-image" src="green-check.png" title="fixed" alt="fixed"/>
       </td>
       <td> closed with disposition fixed </td>
     </tr>
@@ -127,7 +127,7 @@
     <tr class="odd-row">
       <td class="date">2009-06-16</td>
       <td class="issuename">
-        <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
+        <a href="issue-9296e15277906b71eaf1fe232f4dbea2aff0ae61.html">fails if no sound configuration</a> <img class="inline-status-image" src="red-check.png" title="won't fix" alt="won't fix"/>
       </td>
       <td> closed with disposition wontfix </td>
     </tr>
@@ -136,7 +136,7 @@
     <tr class="even-row">
       <td class="date">2009-06-04</td>
       <td class="issuename">
-        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
+        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" title="won't fix" alt="won't fix"/>
       </td>
       <td> commented </td>
     </tr>
@@ -145,7 +145,7 @@
     <tr class="odd-row">
       <td class="date">2009-06-04</td>
       <td class="issuename">
-        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" alt="won't fix" title="won't fix"/>
+        <a href="issue-36b230e65ce96ee672dc0eb91e44c8df37210816.html">incompatible with sturgeon mode server, LP #377482</a> <img class="inline-status-image" src="red-check.png" title="won't fix" alt="won't fix"/>
       </td>
       <td> created </td>
     </tr>
