fix some typographical and grammatical errors
Author: Peter Pentchev <roam@ringlet.net>
Last-Update: 2011-04-08

--- a/newbie.html
+++ b/newbie.html
@@ -147,7 +147,7 @@ is to create a virtual galaxy where everyone can see each other and interact,
 or to put it less academically, everyone plays in the same galaxy to try
 to take it over.
 
-<P>This manual is a guide for netrek beginners; it is independant of any
+<P>This manual is a guide for netrek beginners; it is independent of any
 particular client. Clients are highly configurable and vary from one another
 in terms of features. Please consult your client manual for details. There
 are a lot of very cool things that a client can be configured for, including
