--- a/cow.html
+++ b/cow.html
@@ -866,12 +866,12 @@ Still, they're there!
 
 [Note: This is not yet implemented in WinCOW ]
 <p>
-     You may execute any Unix shell comand within the client. Read your mail 
-now within the client. To do so, just send a message to the destination 
-&quot;!&quot; and you get a shell prompt. Enter the comand and it's output will
+     You may execute any Unix shell command within the client. Read your mail
+now within the client. To do so, just send a message to the destination
+&quot;!&quot; and you get a shell prompt. Enter the command and it's output will
 be displayed in the tools window. Works also with macros to &quot;!&quot;.
 You may disable it in the .xtrekrc for security reasons with shellTools: off
-CAUTION: The client will be blocked for the time the comand is executed.
+CAUTION: The client will be blocked for the time the command is executed.
 Also some programs suspend the client if it is started in the background.
 
 
